--- a/posts/main/guides/env.mdx
+++ b/posts/main/guides/env.mdx
@@ -1,8 +1,18 @@
 ---
 title: Environment Variables
-description: ""
+description: "Environment variables are a way to store app state and config data outside of your codebase. A guide to access them safely within Remix PWA"
 alternateTitle: Environment Variables
+toc: false
 ---
 
+Remix PWA does not do anything to or with environment variables (mostly). In Remix PWA, the `process` object is not available (as service workers run in the client), and as such, accessing them directly is not possible.
 
-{/* Env vars */}
+However, Remix PWA isn't unaware of some of these variables. The main and only one being `NODE_ENV`, this variable is used to determine the state for which the service worker is bundled. As a `production` value will bundle the service worker with optimizations and less exposed stuffs (like `Logger`s), while a `development` value will bundle the service worker with full utilities to help you debug and develop.
+
+You can also utilise `process.env.NODE_ENV` (in that order) within your service worker as Remix PWA would handle substituting the value for you at compilation time.
+
+## Custom Variables
+
+Currently, Remix PWA doesn't offer up a way to access/set custom environment variables within the service worker. This should hopefully be rolling out in a future patch (*higher demand means it rolls out quicker 😉*).
+
+In the meantime, just use your keys directly and worry less about the implications. **Actually, please don't**!
