--- a/posts/main/utils/misc.mdx
+++ b/posts/main/utils/misc.mdx
@@ -10,6 +10,10 @@ alternateTitle: Miscellaneous
 
 The `isLoaderRequest` function allows you to check if a request is a loader request. It takes in the request as it's sole argument.
 
+## `isActionRequest`
+
+The `isActionRequest` function allows you to check if a request is an action request. It takes in the request as it's sole argument.
+
 ## `timeout`
 
 A simple sleep function that resolves after a given time.
